更新 删除了Word2Vector

--- a/dataclean.ipynb
+++ b/dataclean.ipynb
@@ -74,48 +74,27 @@
     "        #英文最长词数： 32 中文最长词数 29\n",
     "print(\"英文最长词数：\",en_maxwords,\"中文最长词数\",ch_maxwords)"
    ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "pytorch",
+   "language": "python",
+   "name": "pytorch"
   },
-  {
-   "cell_type": "markdown",
-   "id": "06b8b3b6",
-   "metadata": {},
-   "source": [
-    "通过清洗后的数据分别训练中文和英文的Word2Vector词嵌入模型，并保存"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "7a57c75f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "英文此表大小 74\n",
-      "中文此表大小 3641\n"
-     ]
-    }
-   ],
-   "source": [
-    "d_model = 512\n",
-    "with open('./cleaned_cmn.txt','r',encoding='utf8') as f:\n",
-    "    lines = f.readlines()\n",
-    "en_sentences = []\n",
-    "ch_sentences = []\n",
-    "for line in lines:\n",
-    "    en_sentences.append(line.split('\\t')[0])\n",
-    "    ch_sentences.append(line.split('\\t')[1])\n",
-    "en_model = Word2Vec(en_sentences,vector_size=d_model,min_count=1,workers=3)\n",
-    "#英文此表大小 74\n",
-    "print('英文词表大小',len(en_model.wv.index_to_key))\n",
-    "en_model.save('enw2v.model')\n",
-    "ch_model = Word2Vec(ch_sentences,vector_size=d_model,min_count=1,workers=3)\n",
-    "#中文此表大小 3641\n",
-    "print('中文词表大小',len(ch_model.wv.index_to_key))\n",
-    "ch_model.save('chw2v.model')"
-   ]
-  },
-  
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
 }
